Compare field values feature added

--- a/public/getpmd.html
+++ b/public/getpmd.html
@@ -54,6 +54,11 @@
                         Grouped by common topics of fields (General content, persons, locations, ..., rights, licence, administrative issues)
                     </label>
                  </div>
+                <div class="radio">
+                    <label><input  name="design"  value="compare"  type="radio">
+                        The values of fields which can be embedded in different formats are compared.
+                    </label>
+                </div>
             </div>
             <input  value="Get Photo Metadata of Web Image"  type="submit" class="btn btn-success">
         </form>
@@ -73,6 +78,11 @@
                 <div class="radio">
                     <label><input  name="design"  value="topics"  type="radio">
                         Grouped by common topics of fields (General content, persons, locations, ..., rights, licence, administrative issues)
+                    </label>
+                </div>
+                <div class="radio">
+                    <label><input  name="design"  value="compare"  type="radio">
+                        The values of fields which can be embedded in different formats are compared.
                     </label>
                 </div>
             </div>
