--- a/public/getiptcpmd.html
+++ b/public/getiptcpmd.html
@@ -26,11 +26,15 @@
             return false;
         }
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
         <h2 style='color:#cc3300; '>This is an experimental site</h2>
-        <h1>Get IPTC Photo Metadata Embedded into an Image</h1>
+        <div class="row">
+            <div class="col-md-5"><h1>Get IPTC Photo Metadata</h1></div>
+            <div class="col-md-7"><h3>... embedded into an Image</h3></div>
+        </div>
         <h3>Option A: an image on the web</h3>
         <form id="getpmdForm" action="#"  method="get"  onsubmit="return goToGetPMDdownload()">
             <div class="form-group">
@@ -66,9 +70,14 @@
 
         <h3>Option B: an image uploaded from your computer</h3>
         <form  id="uploadForm"  enctype="multipart/form-data"  action="/upload"  method="post">
-            <label class="btn btn-default btn-file">
-                Select image file <input name="userPhoto"  type="file" style="display: none;">
-            </label>
+            <div class="input-group">
+                <label class="input-group-btn">
+                    <span class="btn btn-default btn-file">
+                        Select image file&hellip; <input id="my-file-selector" name="userPhoto" type="file" style="display:none;" onchange="$('#upload-file-info').val($(this).val());">
+                    </span>
+                </label>
+                <input type="text" class="form-control" id="upload-file-info" readonly>
+            </div>
             <div class="form-group">
                 <strong>Enter the design of the output:</strong><br>
                 <div class="radio">
