user interface modified

--- a/public/getiptcpmd.html
+++ b/public/getiptcpmd.html
@@ -60,7 +60,7 @@
                  </div>
                 <div class="radio">
                     <label><input  name="design"  value="compare"  type="radio">
-                        The values of fields which can be embedded in different formats are compared.
+                        Compare field values embedded in different formats
                     </label>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="radio">
                     <label><input  name="design"  value="compare"  type="radio">
-                        The values of fields which can be embedded in different formats are compared.
+                        Compare field values embedded in different formats
                     </label>
                 </div>
             </div>
