--- a/public/getiptcpmd.html
+++ b/public/getiptcpmd.html
@@ -97,15 +97,27 @@
             </div>
             <input  value="Get Photo Metadata of Local Image"  type="submit" class="btn btn-success">
         </form>
-        <div id="info1">
-            <p class="prelist">This service builds on the IPTC Photo Metadata Standard and its technical implementations IIM and XMP, and refers to Exif:</p>
-            <ul class="list1">
-                <li>An image file is searched for headers holding metadata in the Exif, IIM and XMP format.</li>
-                <li>Each of the headers is searched for metadata fields defined by the <a href="https://iptc.org/standards/photo-metadata/iptc-standard/" target="_blank">IPTC Photo Metadata Standard</a>.</li>
-                <li>What has been found is displayed in two different groupings, see above.</li>
-            </ul>
-            <p>A key element of this service is <a href="http://owl.phy.queensu.ca/~phil/exiftool/" target="_blank">ExifTool</a>, a software developed by Phil Harvey to retrieve a rich set of metadata fields in different technical formats or to embed such a set into image and video files.</p>
-            <p>This service is provided by <a href="http://www.newsit.biz" target="_blank">NewsIT-M.W.Steidl</a></p>
+        <div id="info1" class="row">
+            <div class="col-md-6">
+                <p class="prelist">This service builds on the IPTC Photo Metadata Standard and its technical implementations IIM and XMP, and refers to Exif:</p>
+                <ul class="list1">
+                    <li>An image file is searched for headers holding metadata in the Exif, IIM and XMP format.</li>
+                    <li>Each of the headers is searched for metadata fields defined by the <a href="https://iptc.org/standards/photo-metadata/iptc-standard/" target="_blank">IPTC Photo Metadata Standard</a>.</li>
+                    <li>What has been found is displayed in two different groupings, see above.</li>
+                </ul>
+                <p>A key element of this service is <a href="http://owl.phy.queensu.ca/~phil/exiftool/" target="_blank">ExifTool</a>, a software developed by Phil Harvey to retrieve a rich set of metadata fields in different technical formats or to embed such a set into image and video files.</p>
+            </div>
+            <div class="col-md-4">
+                <h4>Help for checking images on any web page</h4>
+                <p>Drag the IPTCPMD (IPTC Photo Metadata) on the right to the toolbar of your browser. If you want to see the photo metadata of an image on a web page then click on the IPTCPMD in the toolbar while you view this page. The Javascript behind this button tries to retrieve the first URL of an image on this page. If one is found the result is shown grouped by the technical format standards IIM, XMP and Exif.</p>
+            </div>
+            <div class="col-md-2">
+                <div style="border: 2px black solid; background-color: #F5EE8D; margin-left:5px; padding:5px;"><a onmouseover="window.status='Drag me to your button bar, then click on me when on a page displaying an image'; return true;" onmouseout="window.status=''; return true;" onclick="alert('drag the link to your button bar, then click on me when on a page displaying an image'); return false;" href='javascript:function tst1(e){if(e.links.length>0){var n,t=/.(jpe?g|dng|png|tiff?)$/i,r=0;for(i=0;i<e.links.length;i++)t.test(e.links[i].href)&&(r++,n=e.links[i].href);if(1==r){var m=document.createElement("input");return m.type="hidden",m.name="imgurl",m.value=n,m}}return null}function tst2(e){if(1==e.images.length){var n=e.createElement("input");return n.type="hidden",n.name="imgurl",n.value=e.images[0].src,n}return null}function tst3(e){var n=null;if(e.images.length>=1){var t,r=0;for(i=0;i<e.images.length;i++)size=e.images[i].width*e.images[i].height,size>r&&(r=size,t=e.images[i]);n=t}return n?(Inp=e.createElement("input"),Inp.type="hidden",Inp.name="imgurl",Inp.value=n.src,Inp):null}var form=document.createElement("form");form.target="_blank";var Inp=tst1(document);Inp||(Inp=tst2(document)),Inp||(Inp=tst3(document)),Inp?(form.action="http://getiptcpmd.nitsvc.net/getpmd/?imgurl="+Inp.value,form.appendChild(Inp),document.body.appendChild(form),form.submit()):alert("No image found for retrieving metadata.");'>IPTCPMD</a></div>
+            </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p>This service is provided by <a href="http://www.newsit.biz" target="_blank">NewsIT-M.W.Steidl</a></p>
+            </div>
         </div>
-    </div>
+        </div>
 </body></html>
