--- a/public/getiptcpmd.html
+++ b/public/getiptcpmd.html
@@ -38,7 +38,7 @@
                     </label>
                 </div>
                 (If this field is empty the metadata of the <a  href="https://www.iptc.org/std/photometadata/examples/IPTC-PhotometadataRef-Std2014_large.jpg" target="_blank">IPTC reference image of the Photo Metadata
-                Standard 2014</a> is shown. This image file comprises all metadata
+                Standard 2016</a> is shown. This image file comprises all metadata
                 fields defined by that standard.)
             </div>
             <div class="form-group">
@@ -143,10 +143,12 @@
             <div class="col-md-2">
                 <div style="border: 2px black solid; background-color: lightgoldenrodyellow; margin-top: 45px; margin-left:5px; padding:5px;"><a onmouseover="window.status='Drag me to your button bar, then click on me when on a page displaying an image'; return true;" onmouseout="window.status=''; return true;" onclick="alert('drag the link to your button bar, then click on me when on a page displaying an image'); return false;" href='javascript:function tst1(e){if(e.links.length>0){var n,t=/.(jpe?g|dng|png|tiff?)$/i,r=0;for(i=0;i<e.links.length;i++)t.test(e.links[i].href)&&(r++,n=e.links[i].href);if(1==r){var m=document.createElement("input");return m.type="hidden",m.name="imgurl",m.value=n,m}}return null}function tst2(e){if(1==e.images.length){var n=e.createElement("input");return n.type="hidden",n.name="imgurl",n.value=e.images[0].src,n}return null}function tst3(e){var n=null;if(e.images.length>=1){var t,r=0;for(i=0;i<e.images.length;i++)size=e.images[i].width*e.images[i].height,size>r&&(r=size,t=e.images[i]);n=t}return n?(Inp=e.createElement("input"),Inp.type="hidden",Inp.name="imgurl",Inp.value=n.src,Inp):null}var form=document.createElement("form");form.target="_blank";var Inp=tst1(document);Inp||(Inp=tst2(document)),Inp||(Inp=tst3(document)),Inp?(form.action="http://getiptcpmd.nitsvc.net/getpmd/?imgurl="+Inp.value,form.appendChild(Inp),document.body.appendChild(form),form.submit()):alert("No image found for retrieving metadata.");'>IptcPMD</a></div>
             </div>
+        </div>
         <div class="row">
             <div class="col-md-12">
                 <p>This service is provided by <a href="http://www.newsit.biz" target="_blank">NewsIT-M.W.Steidl</a></p>
             </div>
         </div>
-        </div>
-</body></html>
+    </div>
+</body>
+</html>
