--- a/public/getiptcpmd.html
+++ b/public/getiptcpmd.html
@@ -122,9 +122,7 @@
                         <input  name="tourl" size="80"  id="tourl"  type="text" class="form-control" placeholder="Image URL" aria-describedby="basic-addon2">
                     </label>
                 </div>
-                (If this field is empty the metadata of the <a  href="https://www.iptc.org/std/photometadata/examples/IPTC-PhotometadataRef-Std2016_large.jpg" target="_blank">IPTC reference image of the Photo Metadata
-                Standard 2016</a> is shown. This image file comprises all metadata
-                fields defined by that standard.)
+                (If this field is empty the metadata of the <a  href="https://www.iptc.org/std/photometadata/examples/IPTC-PhotometadataRef-Std2017.1_large.jpg" target="_blank">IPTC reference image of the Photo Metadata Standard 2017.1</a> is shown. This image file comprises all metadata fields defined by that standard.)
             </div>
             <div class="form-group">
                 <strong>Design of the output:</strong><br>
@@ -213,7 +211,8 @@
 
         <h3>Or: Check a Web Page for Image URLs</h3>
         <div class="row">
-            <div class="col-md-12"> ... and get a list of URLs which may be used as starting point for getting metadata.
+            <div class="col-md-12"> ... and get a list of URLs which may be used as starting point for getting metadata.</div>
+        </div>
         <form id="checkpageForm" action="#"  method="get"  onsubmit="return goToCheckWebPage()">
             <div class="form-group">
                 <div class="input-group">
