UI slightly modified

--- a/public/getiptcpmd.html
+++ b/public/getiptcpmd.html
@@ -112,7 +112,7 @@
     <div class="container getpmdtop1">
         <h5 style='color:#cc6600; '>This is a test site of the <a href="https://github.com/nitmws/get-iptc-pmd">get-iptc-pmd project on Github</a></h5>
         <div class="row">
-            <div class="col-md-1"><img src="images/logo.jpg"/></div>
+            <div class="col-md-1"><a href="https://github.com/nitmws/get-iptc-pmd" target="_blank"><img src="images/logo.jpg"/></a></div>
             <div class="col-md-5"><h1>Get IPTC Photo Metadata ...</h1></div>
         </div>
         <h3>Option A: ... embedded into an image on the web</h3>
