--- a/public/getiptcpmd.html
+++ b/public/getiptcpmd.html
@@ -123,7 +123,7 @@
                         <input  name="tourl" size="80"  id="tourl"  type="text" class="form-control" placeholder="Image URL" aria-describedby="basic-addon2">
                     </label>
                 </div>
-                (If this field is empty the metadata of the <a  href="https://www.iptc.org/std/photometadata/examples/IPTC-PhotometadataRef-Std2017.1_large.jpg" target="_blank">IPTC reference image of the Photo Metadata Standard 2017.1</a> is shown. This image file comprises all metadata fields defined by that standard.)
+                (If this field is empty the metadata of the <a  href="https://www.iptc.org/std/photometadata/examples/IPTC-PhotometadataRef-Std2019.1-large.jpg" target="_blank">IPTC reference image of the Photo Metadata Standard 2019.1</a> is shown. This image file comprises all metadata fields defined by that standard.)
             </div>
             <div class="form-group">
                 <strong>Design of the output:</strong><br>
