design isearch1 added

--- a/public/getiptcpmd.html
+++ b/public/getiptcpmd.html
@@ -126,19 +126,24 @@
                 (If this field is empty the metadata of the <a  href="https://www.iptc.org/std/photometadata/examples/IPTC-PhotometadataRef-Std2019.1-large.jpg" target="_blank">IPTC reference image of the Photo Metadata Standard 2019.1</a> is shown. This image file comprises all metadata fields defined by that standard.)
             </div>
             <div class="form-group">
-                <strong>Design of the output:</strong><br>
+                <strong>What is shown:</strong><br>
                 <div class="radio">
                     <label><input  name="design"  checked="checked"  value="stds"  type="radio">
-                        Grouped by technical format standards IIM, XMP and Exif</label>
+                        Metadata grouped by technical format standards IIM, XMP and Exif</label>
                 </div>
                 <div class="radio">
                     <label><input  name="design"  value="topics"  type="radio">
-                        Grouped by common topics of fields (General content, persons, locations, ..., rights, licence, administrative issues)
+                        Metadata grouped by common topics of fields (General content, persons, locations, ..., rights, licence, administrative issues)
                     </label>
-                 </div>
+                </div>
                 <div class="radio">
                     <label><input  name="design"  value="compare"  type="radio">
-                        Compare field values embedded in different formats
+                        Compared values of fields with the same definition but in different formats
+                    </label>
+                </div>
+                <div class="radio">
+                    <label><input  name="design"  value="isearch1"  type="radio">
+                        Metadata relevant for results of search engines
                     </label>
                 </div>
             </div>
@@ -174,19 +179,24 @@
                 <input type="text" class="form-control" id="upload-file-info" readonly>
             </div>
             <div class="form-group">
-                <strong>Design of the output:</strong><br>
+                <strong>What is shown:</strong><br>
                 <div class="radio">
                     <label><input  name="design"  checked="checked"  value="stds"  type="radio">
-                        Grouped by technical format standards IIM, XMP and Exif</label>
+                        Metadata grouped by technical format standards IIM, XMP and Exif</label>
                 </div>
                 <div class="radio">
                     <label><input  name="design"  value="topics"  type="radio">
-                        Grouped by common topics of fields (General content, persons, locations, ..., rights, licence, administrative issues)
+                        Metadata grouped by common topics of fields (General content, persons, locations, ..., rights, licence, administrative issues)
                     </label>
                 </div>
                 <div class="radio">
                     <label><input  name="design"  value="compare"  type="radio">
-                        Compare field values embedded in different formats
+                        Compared values of fields with the same definition but in different formats
+                    </label>
+                </div>
+                <div class="radio">
+                    <label><input  name="design"  value="isearch1"  type="radio">
+                        Metadata relevant for results of search engines
                     </label>
                 </div>
             </div>
