--- a/public/getiptcpmd.html
+++ b/public/getiptcpmd.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="radio">
                     <label><input  name="design"  value="isearch1"  type="radio">
-                        Metadata relevant for results of search engines
+                        Metadata relevant for photos shown as result by search engines
                     </label>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="radio">
                     <label><input  name="design"  value="isearch1"  type="radio">
-                        Metadata relevant for results of search engines
+                        Metadata relevant for photos shown as result by search engines
                     </label>
                 </div>
             </div>
